gccida/c2/fixup_var_refs_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2425:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2457:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v64; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2459:4: error: expected ';' after expression
rtx v66; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2459:5: error: use of undeclared identifier 'v66'
rtx v66; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2461:4: error: expected ';' after expression
rtx v68; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2461:5: error: use of undeclared identifier 'v68'
rtx v68; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2464:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2464:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2468:4: error: expected ';' after expression
rtx v75; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2468:5: error: use of undeclared identifier 'v75'
rtx v75; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2470:4: error: expected ';' after expression
rtx v77; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2470:5: error: use of undeclared identifier 'v77'
rtx v77; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2471:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v78; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2474:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2474:5: error: use of undeclared identifier 'v81'
rtx v81; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2476:4: error: expected ';' after expression
rtx v83; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2476:5: error: use of undeclared identifier 'v83'
rtx v83; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/function.c:2477:4: error: expected ';' after expression
rtx v84; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_var_refs_1/src/obj/function.o] Error 1
